# PLANETS_DEMO

./: .gitignore  Procfile  README.md  generate_pptx.py  presentation_content.md  render.yaml  requirements.txt
EXOPLANET-HUNTERS-Backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
EXOPLANET-HUNTERS-Backend/app/: database.py  main.py
EXOPLANET-HUNTERS-Backend/app/api/v1/: dependencies.py
EXOPLANET-HUNTERS-Backend/app/api/v1/endpoints/: auth.py  users.py
EXOPLANET-HUNTERS-Backend/app/core/: config.py  exceptions.py  security.py
EXOPLANET-HUNTERS-Backend/app/models/: user.py
EXOPLANET-HUNTERS-Backend/app/schemas/: user.py
EXOPLANET-HUNTERS-Backend/app/services/: user_service.py
EXOPLANET-HUNTERS-Frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
EXOPLANET-HUNTERS-Frontend/public/: index.html
EXOPLANET-HUNTERS-Frontend/src/: App.tsx
EXOPLANET-HUNTERS-Frontend/src/constants/: index.ts
EXOPLANET-HUNTERS-Frontend/src/hooks/: index.ts  useCyclicIndex.ts  useModal.ts
EXOPLANET-HUNTERS-Frontend/src/pages/: ForgotPasswordPage.tsx  LoginPage.tsx  ProfilePage.tsx  SignupPage.tsx  index.ts
EXOPLANET-HUNTERS-Frontend/src/types/: index.ts
astronet-cnn-v3/: Dockerfile  README.md  setup.py
astronet-cnn-v3/exoplanet-ml/: .gitattributes  .gitignore  classifier.py  detrending.py  explainability.py  feature_extractor.py  generate_research_reports.py  k2_input.py  kepler_input.py  kepler_input_fits.py  report_generator.py  requirements.txt  server.py  tess_input.py  tess_input_fits.py
(+39 files in other folders)
